Updated 如何使用 (markdown)

--- a/如何使用.md
+++ b/如何使用.md
@@ -15,6 +15,12 @@ Magisk 版需要安装最新的安装包，**请使用4.1.3 版本！！**
 
 刷入 Magisk 模块，这一点不赘述。
 
+#### 我应该使用 3.2-b 还是 3.2-a ？
+
+优先使用 3.2-b！！，如果 3.2-b 使用稳定，才可以尝试3.2-a。
+
+3.2-b 不支持核心破解和边缘手势，需要的话可以尝试 3.2-a。如果3.2-a出现软重启的现象，请重新刷 3.2-b；但是暂时无法使用边缘手势和 3.2-a，等待修复即可。
+
 ### 内测激活
 
 太极的 Magisk 模块刷入之后，重启手机；重新打开太极，会提示内测中，需要你输入内测码。
