Updated 常见问题 (markdown)

--- a/常见问题.md
+++ b/常见问题.md
@@ -1,3 +1,9 @@
+### Q：为什么需要内测码？
+A：刷机有风险，现在还处于测试阶段；随时可能出问题。只有在你有明确目的的情况下才能建议使用，内测码机制可以筛选掉大部分本不愿意折腾的用户。
+
+### Q：为什么需要读取手机信息？
+A：实际上，只读取了你的 IMEI 信息。另外，太极除了检查更新，没有任何联网操作；不会收集你的任何信息。不放心的放，禁止太极联网，然后手动更新APP即可。
+
 ### Q：为什么有些模块不支持（如绿色守护，应用管理）？
 A：因为 rovo89 的 Xposed 压根就不支持 9.0，因此模块都没有适配 9.0 系统。Android 9.0 系统发生了较大的变化，因此这些系统级别的模块我自己尝试是无法正常工作的，可能导致无法开机，因此无法使用。
 
