Updated 常见问题 (markdown)

--- a/常见问题.md
+++ b/常见问题.md
@@ -1,5 +1,5 @@
 ### Q：为什么需要内测码？
-A：刷机有风险，现在还处于测试阶段；随时可能出问题。只有在你有明确目的的情况下才能建议使用，内测码机制可以筛选掉大部分本不愿意折腾的用户。
+A：刷机有风险，现在还处于测试阶段；随时可能出问题。只有在你有明确目的的情况下才能建议使用，内测码机制可以筛选掉大部分本不愿意折腾的用户。还可以筛选掉一些连打开个网页复制个标识码都不愿意的伸手党。
 
 ### Q：为什么需要读取手机信息？
 A：实际上，只读取了你的 IMEI 信息。另外，太极除了检查更新，没有任何联网操作；不会收集你的任何信息。不放心的放，禁止太极联网，然后手动更新APP即可。
