Updated 常见问题 (markdown)

--- a/常见问题.md
+++ b/常见问题.md
@@ -22,11 +22,18 @@ A：是否使用了 太极magisk 模块的 3.2-a，请使用  3.2-b。
 ### Q：为什么模块无法生效？
 
 A：有诸多原因，请逐一检查：
-1）是否需要使用Xposed的APP添加到了太极中？
-2）是否勾选了对应的模块？
-3）某些模块需要重启手机，是否重启过？
-4）某些模块只支持特定版本的APP，APP版本是否正确？
-5）模块版本是否正确？**请使用群文件中我上传的已经验证过的模块**
+
+1. 是否需要使用Xposed的APP添加到了太极中？
+2. 是否勾选了对应的模块？
+3. 某些模块需要重启手机，是否重启过？
+4. 某些模块只支持特定版本的APP，APP版本是否正确？
+5. 模块版本是否正确？**请使用群文件中我上传的已经验证过的模块**
+
+注意：太极·Magisk版有一些使用方法与 Xposed 不同，请知悉：
+
+1. **必须把 APP 添加到太极中，太极才会对这个 APP 启用Xposed 功能。**
+2. 不是作用于系统的模块，无需重启手机即可生效。
+3. 模块重新安装之后，需要重新勾选。
 
 ### Q：为什么无法开机，卡 Logo？
 A：请反馈给我，但是暂时可能无法解决；请先使用普通版太极。等我做好了日志模块，后续注意解决。
