--- a/内测码发放.md
+++ b/内测码发放.md
@@ -4,6 +4,10 @@
 
 （请放心，如果你需要，一定能拿到码，我们不做任何限制。）
 
+## 为什么需要内测码？
+
+刷机有风险，现在还处于测试阶段；随时可能出问题。只有在你有明确目的的情况下才能建议使用，内测码机制可以筛选掉大部分本不愿意折腾的用户。还可以筛选掉一些连打开个网页复制个标识码都不愿意的伸手党。
+
 ## 如何获取内测码？
 
 1. 首先你需要安装好 4.1.3 版本的太极（群文件），**其他版本无效**！！
