--- a/如何使用.md
+++ b/如何使用.md
@@ -25,7 +25,9 @@ Magisk 版需要安装最新的安装包，**请使用4.1.3 版本！！**
 
 太极的 Magisk 模块刷入之后，重启手机；重新打开太极，会提示内测中，需要你输入内测码。
 
-请填写问卷：
+请填写问卷：https://www.wjx.top/jq/34053577.aspx
+
+**内测码不包含冒号前面的那部分，并且有三行。复制的时候注意。**
 
 **每隔一小时，我会发放这段时间内填写问卷的用户的内测码**
 
