Updated 注意事项和已知问题 (markdown)

--- a/注意事项和已知问题.md
+++ b/注意事项和已知问题.md
@@ -4,6 +4,13 @@
 
 3.2-b 不支持核心破解和边缘手势，需要的话可以尝试 3.2-a。如果3.2-a出现软重启的现象，请重新刷 3.2-b；但是暂时无法使用边缘手势和 3.2-a，等待修复即可。
 
+## 模块冲突
+
+太极Magisk模块可能与其他的 Magisk模块有冲突，其他模块开启之后，太极将不会工作：
+1. 高级设置
+2. Magisk Hide Prop Config
+3. SafetyPatch
+
 ## 非 9.0 系统可以使用吗？
 
 9.0系统优先使用，9.0以下没有充分测试；请保持谨慎！**8.0以下的系统最好压根就不要尝试!!**
