Updated 内测码发放 (markdown)

--- a/内测码发放.md
+++ b/内测码发放.md
@@ -14,10 +14,6 @@
 2. 打开太极APP，进入关于页面，点击“获取标识码”，把标识码复制到剪切板。
 3. 添加问卷：https://www.wjx.top/m/34053577.aspx  把你的标识码复制上去，提交即可。
 
-**请注意不要随便填写，恶意提交**，这样会加大我的工作量，对任何人都没有好处；谢谢配合。另外，**除了标识码之外，请不要填写任何其他内容**，否则机器不会正确识别，你也拿不到正确的码。
+**关注公众号 虚拟框架 直接回复设备标识码 就能拿到内测码**
 
-
-
-我会在每隔一小时，把这段时间内填写问卷的用户的内测码公布在群文件。大家找到自己标识码对应的内测码，保存好即可。
-
-**如果你三清之后，标识码发生了变化；重新填写问卷即可**，不要再单独私聊我。
+**如果你三清之后，标识码发生了变化；重新回复即可**，不要再单独私聊我。
