Updated 内测码发放 (markdown)

--- a/内测码发放.md
+++ b/内测码发放.md
@@ -12,8 +12,6 @@
 
 1. 首先你需要安装好 4.1.3 版本的太极（群文件），**其他版本无效**！！
 2. 打开太极APP，进入关于页面，点击“获取标识码”，把标识码复制到剪切板。
-3. 添加问卷：https://www.wjx.top/m/34053577.aspx  把你的标识码复制上去，提交即可。
-
-**关注公众号 虚拟框架 直接回复设备标识码 就能拿到内测码**
+3. **关注公众号 虚拟框架 直接回复设备标识码 就能拿到内测码**
 
 **如果你三清之后，标识码发生了变化；重新回复即可**，不要再单独私聊我。
