Updated 常见问题 (markdown)

--- a/常见问题.md
+++ b/常见问题.md
@@ -32,6 +32,15 @@ A：原本太极支持的模块都支持，新增支持的模块（边缘手势/
 ### Q：为什么还是有模块限制？
 A：实际上，Magisk 版不会对 **公开的，非恶意**的模块做任何限制；如果你有需要使用的模块，可以填写问卷：https://www.wjx.top/jq/34048812.aspx 提交给我。
 
+### Q：开放所有模块，能不能用让我们自己测试不就行了？
+A：实际上，能折腾并且能理解和体谅开发者的用户凤毛菱角。很多用户（包括会刷机的）甚至连模块在哪里下载都不知道，太极中的模块下载是请求服务器数据的，有段时间服务器挂掉了，有的用户以为是太极 APP 出了问题，卸载重装，刷机，甚至恢复出厂设置。如果冒昧开放所有模块，而其中相当一部分模块无法使用，这些用户只会觉得 APP 垃圾，然后卸载。所以我必须明确告诉他们，哪些模块现在是不行的，哪些模块是可以用的。另外，太极支持免ROOT运行，大量连手机都不怎么会用的用户对我来说就是灾难。
+
+### Q：搞两个版本，一个全开，一个限制？
+A：这跟只有一个全开的版本没有任何区别。
+
+### Q：模块更新就会失效？
+A：是的。但是这将不是问题，太极 以后会 Daily Build （每天都更新一个版本）；理论上，所有的模块只要有新版，确认可用之后，立马就可以用。
+
 ### Q：我是开发者，如何适配 太极·Magisk？
 A：首先表示欢迎，然后感谢你们的付出。现在可以直接私聊我（以后我会拉开发者群）。
 
