--- a/如何使用.md
+++ b/如何使用.md
@@ -7,35 +7,28 @@
 
 ## 使用方法
 
+首先你必须安装好了 Magisk，可以参考 [Magisk in XDA](https://forum.xda-developers.com/apps/magisk/official-magisk-v7-universal-systemless-t3473445)
+
 ### 安装太极
 
-Magisk 版需要安装最新的安装包，**请使用4.1.3 版本！！**
+Magisk 版需要安装最新的安装包，可以在 [Release 页面](https://github.com/tiann/Tai-Chi/releases) 找到安装包。
  
-### 刷入模块
+### 刷入 Magisk 模块
 
-刷入 Magisk 模块，这一点不赘述。
+**必须先安装好了 Magisk，否则无法进行**。然后，在 [Release 页面](https://github.com/tiann/Tai-Chi/releases) 找到太极提供的 magisk 模块，注意：这是一个 ZIP 包，不是 APK 文件。
 
-#### 我应该使用 3.2-b 还是 3.2-a ？
+1. 打开 Magisk Manager，点击左上角侧滑菜单。
+2. 选择 `模块` 打开 模块管理页面
+3. 点击页面下方的 ➕ 从文件选择器选择 太极 提供的 magisk 模块的安装包。
+4. 等待安装结束，重启手机。
 
-优先使用 3.2-b！！，如果 3.2-b 使用稳定，才可以尝试3.2-a。
-
-3.2-b 不支持核心破解和边缘手势，需要的话可以尝试 3.2-a。如果3.2-a出现软重启的现象，请重新刷 3.2-b；但是暂时无法使用边缘手势和 3.2-a，等待修复即可。
-
-### 内测激活
-
-太极的 Magisk 模块刷入之后，重启手机；重新打开太极，会提示内测中，需要你输入内测码。
-
-请填写问卷：https://www.wjx.top/jq/34053577.aspx
-
-**内测码不包含冒号前面的那部分，并且有三行。复制的时候注意。**
-
-**每隔一小时，我会发放这段时间内填写问卷的用户的内测码**
+另外，你也可以通过 TWRP 直接刷入 太极的 magisk 模块，不赘述。
 
 ### 使用
 
 万事俱备之后，下面就是使用方法：
 
-1. 打开太极，添加你需要使用 Xposed 模块的APP，如微信到太极中。
+1. 打开太极，添加你需要使用 Xposed 模块的 APP，如微信到太极中。
 2. 进入模块管理，勾选上你需要使用的 Xposed 模块，如 全部成为F。
 3. 强制停止你需要观察效果的APP，如上面的微信。
 4. 打开微信观察效果。
