--- a/如何使用.md
+++ b/如何使用.md
@@ -11,11 +11,11 @@
 
 ### 安装太极
 
-Magisk 版需要安装最新的安装包，可以在 [Release 页面](https://github.com/tiann/Tai-Chi/releases) 找到安装包。
+Magisk 版需要安装最新的安装包，可以在 [太极官网](https://taichi.cool/download/download_cn.html) 找到安装包。
  
 ### 刷入 Magisk 模块
 
-**必须先安装好了 Magisk，否则无法进行**。然后，在 [Release 页面](https://github.com/taichi-framework/TaiChi-Magisk/releases) 找到太极提供的 magisk 模块，注意：这是一个 ZIP 包，不是 APK 文件。
+**必须先安装好了 Magisk，否则无法进行**。然后，在 [太极官网](https://taichi.cool/download/download_cn.html) 找到太极提供的 magisk 模块，注意：这是一个 ZIP 包，不是 APK 文件。
 
 1. 打开 Magisk Manager，点击左上角侧滑菜单。
 2. 选择 `模块` 打开 模块管理页面
